<resources>
    <string name="app_name">Collage Marketplace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="college_name">College Name</string>
    <string name="branch">Branch</string>
    <string name="year">Year</string>
    <string name="roll_number">Roll Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="already_have_account_login">Already have an account? Login</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="register_to_get_started">Register to get started</string>
</resources>